--- a/carte.html
+++ b/carte.html
@@ -93,16 +93,8 @@
     <nav>
         <a href="index.html">Accueil</a>
         <a href="index.html">Services</a>
-        <a href="reservation/rendezvous.html">Prendre rendez-vous </a>
-        <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envoyer un email</title>
-</head>
-<body>
-<a href="mailto:rtmecapro.outlook.fr?subject=">Envoyer un email</a>
-
+        <a href="reservation/rendezvous.html">Prendre rendez-vous</a>
+        <a href="mailto:rtmecapro@outlook.fr?subject=">Envoyer un email</a>
     </nav>
     <section>
         <div id="text-container">
@@ -112,6 +104,7 @@
             <div id="map"></div>
         </div>
     </section>
+
  
     <html lang="fr">
     <head>
