--- a/index.html
+++ b/index.html
@@ -68,14 +68,8 @@
         <a href="#accueil">Accueil</a>
         <a href="#services">Services</a>
         <a href="reservation/rendezvous.html">Prendre rendez-vous </a>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envoyer un email</title>
-</head>
-<body>
-<a href="mailto:rtmecapro.outlook.fr?subject=">Envoyer un email</a>
+        <a href="mailto:rtmecapro@outlook.fr?subject=">Envoyer un email</a>
+    </nav>
 
 <!DOCTYPE html>
 <html lang="en">
